--- a/src/css/index.css
+++ b/src/css/index.css
@@ -54,3 +54,73 @@ button {
 button:hover {
     background-color: #6c8cff;
 }
+
+.gallery {
+    padding-right: 156px;
+    padding-left: 156px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+.list-item {
+    list-style: none;
+}
+
+.card {
+    border: 1px solid #808080;
+    width: 360px;
+    display: flex;
+    flex-direction: column;
+    /* overflow: hidden; */
+}
+
+.card-link {
+    display: block;
+    width: 100%;
+    height: 152px;
+    /* overflow: hidden; */
+}
+
+.card-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-info {
+    border-bottom: 1px solid #808080;
+    border-left: 1px solid #808080;
+    border-right: 1px solid #808080;
+    padding: 4px 20px;
+}
+
+.card-list {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.card-list-info {
+    width: 34px;
+    height: 40px;
+}
+
+.card-info-title {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.33333;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+.card-info-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
