--- a/src/css/index.css
+++ b/src/css/index.css
@@ -62,7 +62,6 @@ button:hover {
     flex-wrap: wrap;
     gap: 24px;
     justify-content: center;
-    /* align-items: center; */
 }
 
 .list-item {
@@ -74,47 +73,35 @@ button:hover {
     width: 360px;
     display: flex;
     flex-direction: column;
-    /* overflow: hidden; */
 }
 
 .card-link {
     display: block;
     width: 100%;
-    height: 152px;
-    /* overflow: hidden; */
+    height: 182px;
 }
 
 .card-img {
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-}
-
-.card-info {
-    border-bottom: 1px solid #808080;
-    border-left: 1px solid #808080;
-    border-right: 1px solid #808080;
-    padding: 4px 20px;
 }
 
 .card-list {
     display: flex;
     flex-direction: row;
-    gap: 20px;
-}
-
-.card-list-info {
-    width: 34px;
-    height: 40px;
+    padding: 4px 20px;
+    align-items: center;
+    gap: 40px;
 }
 
 .card-info-title {
     font-weight: 600;
     font-size: 12px;
-    line-height: 1.33333;
+    line-height: 1.33;
     letter-spacing: 0.04em;
     color: #2e2f42;
+    text-align: center;
 }
 
 .card-info-text {
@@ -123,4 +110,5 @@ button:hover {
     line-height: 2;
     letter-spacing: 0.04em;
     color: #2e2f42;
+    text-align: center;
 }
